<resources>
    <string name="app_name">Umpire Buddy</string>
    <string name="strike_button_label">Strike</string>
    <string name="ball_button_label">Ball</string>
    <string name="main_title">Umpire Buddy</string>
    <string name="ball_label">Balls:</string>
    <string name="strike_label">Strikes:</string>
    <string name="outs_label">Outs:</string>
    <string name="about_text">Umpire Buddy - by Jonathan Whipple</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_tts_on">off</string>
    <string name="tts_settings_label">Text-to-Speech (TTS)</string>
    <string name="back_button_label">Back</string>
    <string name="reset_label">Reset</string>
</resources>
