<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/mainBG"
    tools:context="com.example.jw043373.myapplication.MainActivity">

    <GridLayout
        android:background="@color/gridBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/main_title"
            android:id="@+id/textView"
            android:textSize="50sp"
            android:layout_column="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_columnSpan="5"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#1a2e8f" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="5" />

        <TextView
            android:text="@string/ball_label"
            android:id="@+id/ball_text_label"
            android:layout_column="1"
            android:layout_marginStart="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:textSize="25sp"
            android:textIsSelectable="false" />


        <TextView
            android:text="@string/strike_label"
            android:id="@+id/strike_text_label"
            android:layout_marginStart="100dp"
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:textSize="25sp" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:id="@+id/ball_counter_text"
            android:textSize="20sp"
            android:layout_row="2"
            android:layout_column="3" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/strike_counter_text"
            android:gravity="end"
            android:textSize="20sp"
            android:layout_column="3"
            android:layout_row="3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="5"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="5" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/ball_button_label"
            android:id="@+id/ball_button"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="5" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="5" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/strike_button_label"
            android:id="@+id/strike_button"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_columnSpan="5" />


    </GridLayout>

</RelativeLayout>
